@@ -1,6 +1,13 @@
 LIST OF CHANGES
 ---------------
 
+ - Update Copyright statements for all Perl modules according to WSI
+   requirements. Retrofit years using dates returned by 'git log' command.
+   Example:
+   git log --SOME_MODULE.pm | grep 'Date:' | cut -d ':' -f 4 | \
+   cut -d ' ' -f 2 | uniq | sort -g | xargs echo | \
+   perl -nle '$_=~s/\ /,/g; print "Copyright (C) $_ Genome Research Ltd."'
+
 release 6.15.0
  - Move from Travis CI to GitHub Actions.
  - If a WHERE clause in a SELECT query for the iseq_flowcell table
